[project]
name = "fast-curate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numcodecs==0.15.1",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pyqtgraph>=0.13.7",
    "spikeinterface",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "skops>=0.11.0",
    "scikit-optimize>=0.10.2",
    "xgboost>=3.0.2",
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "huggingface-hub>=0.35.0",
    "spikeinterface-gui",
    "pyqt5>=5.15.11",
    "s3fs>=2025.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["unit_refine"]
package-dir = {"unit_refine" = "src/unit_refine"}

[project.scripts]
unit_refine = "unit_refine.main:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]
